# scReadSim

./: .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  conda_environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  synthetic_cell_barcode.txt  synthetic_cell_barcode.txt.withSynthCluster
docs/: .readthedocs.yaml  Makefile  conf.py  environment.yml  make.bat  requirements.txt
docs/source/: API.rst  About scReadSim.rst  InstallTools.rst  conf.py  index.rst  scATACseq_INPUT_10X.rst  scATACseq_MultiSamples.rst  scATACseq_NoInput_10X.rst  scMultiOmics.rst  scRNAseq_10X.rst  scRNAseq_10X_Condition.rst  scRNAseq_10X_ExonOnly.rst  scRNAseq_MultiSamples.rst  scReadSim.data.rst
scReadSim/: DoubletDetection.py  GenerateSyntheticCount.py  GenerateSyntheticCount_ConditionEffect.py  GenerateSyntheticCount_MultiOmics.py  Utility.py  Utility_INPUT.py  scATAC_GenerateBAM.py  scATAC_GenerateSyntheticCount.py  scATAC_Utility.py  scRNA_GenerateBAM.py  setup.py
scReadSim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scReadSim/Rscript/: DoubletDetection_Rscript.R  SyntheticCountFunctions.R  SyntheticCountFunctions_ConditionEffect.R  SyntheticCountFunctions_MultiOmics.R  scATAC_SyntheticCountFunctions.R
scReadSim/data/: 10X_ATAC_chr1_4194444_4399104.bam  10X_ATAC_chr1_4194444_4399104.bam.bai  10X_ATAC_chr1_4194444_4399104_rep2.bam  (+20 more)
tests/: test_scATAC_INPUT_bed.txt  test_scATAC_main_INPUT_demoData.py  test_scATAC_main_infunction.py  test_scATAC_main_infunction_demoData.py  test_scRNA_main_infunction.py  test_scRNA_main_infunction_demoData.py
(+25 files in other folders)
