[metadata]
name = scReadSim
version = 0.1.0
author = Guanao Yan
author_email = gayan@g.ucla.com
description = A single cell sequencing reads simulator.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dominic7227/scReadSim
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = scReadSim
packages = find:
python_requires = >=3.6

[options.packages.find]
where = scReadSim